gui/glfw_test/glfw3.pas


  GLFW_FOCUSED = $00020001;
  GLFW_ICONIFIED = $00020002;
  GLFW_RESIZABLE = $00020003;
  GLFW_VISIBLE = $00020004;
  GLFW_DECORATED = $00020005;
  GLFW_RED_BITS = $00021001;
  GLFW_GREEN_BITS = $00021002;
  GLFW_BLUE_BITS = $00021003;
  GLFW_ALPHA_BITS = $00021004;
  GLFW_DEPTH_BITS = $00021005;
  GLFW_STENCIL_BITS = $00021006;
  GLFW_ACCUM_RED_BITS = $00021007;
  GLFW_ACCUM_GREEN_BITS = $00021008;
  GLFW_ACCUM_BLUE_BITS = $00021009;
  GLFW_ACCUM_ALPHA_BITS = $0002100A;
  GLFW_AUX_BUFFERS = $0002100B;
  GLFW_STEREO = $0002100C;
  GLFW_SAMPLES = $0002100D;
  GLFW_SRGB_CAPABLE = $0002100E;
  GLFW_REFRESH_RATE = $0002100F;
  GLFW_CLIENT_API = $00022001;
  GLFW_CONTEXT_VERSION_MAJOR = $00022002;
  GLFW_CONTEXT_VERSION_MINOR = $00022003;
  GLFW_CONTEXT_REVISION = $00022004;
  GLFW_CONTEXT_ROBUSTNESS = $00022005;
  GLFW_OPENGL_FORWARD_COMPAT = $00022006;
  GLFW_OPENGL_DEBUG_CONTEXT = $00022007;
  GLFW_OPENGL_PROFILE = $00022008;
  GLFW_OPENGL_API = $00030001;
  GLFW_OPENGL_ES_API = $00030002;
  GLFW_NO_ROBUSTNESS = 0;
  GLFW_NO_RESET_NOTIFICATION = $00031001;
  GLFW_LOSE_CONTEXT_ON_RESET = $00031002;
  GLFW_OPENGL_ANY_PROFILE = 0;
  GLFW_OPENGL_CORE_PROFILE = $00032001;
  GLFW_OPENGL_COMPAT_PROFILE = $00032002;
  GLFW_CURSOR = $00033001;
  GLFW_STICKY_KEYS = $00033002;
  GLFW_STICKY_MOUSE_BUTTONS = $00033003;
  GLFW_CURSOR_NORMAL = $00034001;
  GLFW_CURSOR_HIDDEN = $00034002;
  GLFW_CURSOR_DISABLED = $00034003;
  GLFW_CONNECTED = $00040001;
  GLFW_DISCONNECTED = $00040002;
//All call must be  cdecl
function glfwInit: integer cdecl; external GLFW_DLL;
procedure glfwTerminate; cdecl; external GLFW_DLL;
procedure glfwGetVersion(out major, minor, rev: integer);
  cdecl; external GLFW_DLL;
function glfwGetVersionString: PChar; cdecl; external GLFW_DLL;
//========================================================================
//Monitor
//========================================================================
function glfwGetMonitors(var Monitors: GLFW_INT): GLFWmonitor; cdecl; external GLFW_DLL;
function glfwGetPrimaryMonitor: pGLFWmonitor; cdecl; external GLFW_DLL;
procedure glfwGetMonitorPos(monitor: pGLFWmonitor; var xpos: GLFW_INT;
  var ypos: GLFW_INT); cdecl; external GLFW_DLL;
procedure glfwGetMonitorPhysicalSize(Monitor: pGLFWmonitor; var Width: GLFW_INT;
  var Height: GLFW_INT); cdecl; external GLFW_DLL;
function glfwGetMonitorName(Monitor: pGLFWmonitor): PChar; cdecl; external GLFW_DLL;
function glfwSetMonitorCallback(cbfun: GLFWmonitorfun): pGLFWmonitorfun;
  cdecl; external GLFW_DLL; //Untest
//========================================================================
//Video Mode
//========================================================================
function glfwGetVideoModes(monitor: pGLFWmonitor; var Count: longint): PGLFWvidmode;
  cdecl; external GLFW_DLL;
procedure glfwSetGamma(monitor: pGLFWmonitor; gamma: single); cdecl; external GLFW_DLL;
procedure glfwSetGammaRamp(monitor: pGLFWmonitor; ramp: pGLFWgammaramp);
  cdecl; external GLFW_DLL;
//========================================================================
//Windows (not the SO)
//========================================================================
procedure glfwDefaultWindowHints; cdecl; external GLFW_DLL;
procedure glfwWindowHint(target: integer; hint: integer); cdecl; external GLFW_DLL;
function glfwCreateWindow(Width, Height: integer; title: PChar;
  monitor: pGLFWmonitor; share: pGLFWwindow): pGLFWwindow; cdecl; external GLFW_DLL;
procedure glfwDestroyWindow(Window: pGLFWwindow); cdecl; external GLFW_DLL;
function glfwWindowShouldClose(Window: pGLFWwindow): integer; cdecl; external GLFW_DLL;
procedure glfwSetWindowShouldClose(window: pGLFWwindow; Action: GLFW_INT);
  cdecl; external GLFW_DLL;
procedure glfwSetWindowTitle(window: pGLFWwindow; title: PChar); cdecl;
  external GLFW_DLL;
procedure glfwGetWindowPos(window: pGLFWWindow; var xpos, ypos: integer);
  cdecl; external GLFW_DLL;
procedure glfwSetWindowPos(window: pGLFWwindow; xpos, ypos: integer);
  cdecl; external GLFW_DLL;
procedure glfwGetWindowSize(window: pGLFWwindow; var Width, Height: integer); cdecl;
  external GLFW_DLL;
procedure glfwSetWindowSize(window: pGLFWwindow; var Width, Height: integer);
  cdecl; external GLFW_DLL;
procedure glfwGetFramebufferSize(window: pGLFWwindow; var Width, Height: integer); cdecl;
  external GLFW_DLL;
procedure glfwIconifyWindow(window: pGLFWwindow); cdecl; external GLFW_DLL;
procedure glfwRestoreWindow(window: pGLFWwindow); cdecl; external GLFW_DLL;
procedure glfwShowWindow(window: pGLFWwindow); cdecl; external GLFW_DLL;
procedure glfwHideWindow(window: pGLFWwindow); cdecl; external GLFW_DLL;
function glfwGetWindowMonitor(window: pGLFWwindow): pGLFWmonitor;
  cdecl; external GLFW_DLL;
procedure glfwGetWindowAttrib(window: pGLFWwindow; attrib: integer);
  cdecl; external GLFW_DLL;
{ TODO : Es correcto usar pointer como tipo de dato? }
procedure glfwSetWindowUserPointer(window: pGLFWwindow; p: pointer);
  cdecl; external GLFW_DLL;  //Pointer??
function glfwGetWindowUserPointer(window: GLFWwindow): Pointer; cdecl; external GLFW_DLL;
function glfwSetWindowPosCallback(window: pGLFWwindow;
  cbfun: GLFWwindowposfun): pGLFWwindowposfun; cdecl; external GLFW_DLL;
function glfwSetWindowSizeCallback(window: pGLFWwindow;
  cbfun: GLFWwindowsizefun): pGLFWwindowsizefun; cdecl; external GLFW_DLL;
function glfwSetWindowCloseCallback(window: pGLFWwindow;
  ccbfun: GLFWwindowclosefun): pGLFWwindowclosefun; cdecl; external GLFW_DLL;
function glfwSetWindowRefreshCallback(window: pGLFWwindow;
  cbfun: GLFWwindowrefreshfun): pGLFWwindowrefreshfun; cdecl; external GLFW_DLL;
function glfwSetWindowFocusCallback(window: pGLFWwindow;
  cbfun: GLFWwindowfocusfun): pGLFWwindowfocusfun; cdecl; external GLFW_DLL;
function glfwSetWindowIconifyCallback(window: pGLFWwindow;
  cbfun: GLFWwindowiconifyfun): pGLFWwindowiconifyfun; cdecl; external GLFW_DLL;
function glfwSetFramebufferSizeCallback(window: pGLFWwindow;
  cbfun: GLFWframebuffersizefun): pGLFWframebuffersizefun; cdecl; external GLFW_DLL;
procedure glfwPollEvents; cdecl; external GLFW_DLL;
procedure glfwWaitEvents; cdecl; external GLFW_DLL;
//========================================================================
//Input
//========================================================================
function glfwGetInputMode(window: pGLFWwindow; mode: integer): integer;
  cdecl; external GLFW_DLL;
procedure glfwSetInputMode(window: pGLFWwindow; mode, Value: integer); cdecl;
  external GLFW_DLL;
function glfwGetKey(window: pGLFWwindow; key: integer): integer;
  cdecl; external GLFW_DLL;
function glfwGetMouseButton(window: pGLFWwindow; button: integer): integer;
  cdecl; external GLFW_DLL;
function glfwGetCursorPos(window: pGLFWwindow; var xpos, ypos: double): integer;
  cdecl; external GLFW_DLL;
procedure glfwSetCursorPos(window: pGLFWwindow; xpos, ypos: double);
  cdecl; external GLFW_DLL;
function glfwSetKeyCallback(window: pGLFWwindow; cbfun: GLFWkeyfun): pGLFWKeyFun;
  cdecl; external GLFW_DLL;
function glfwSetCharCallback(window: pGLFWwindow;
  cdfun: GLFWcharfun): pGLFWcharfun; cdecl;
  external GLFW_DLL;
function glfwSetMouseButtonCallback(window: pGLFWwindow;
  cbfun: GLFWmousebuttonfun): pGLFWmousebuttonfun; cdecl; external GLFW_DLL;
function glfwSetCursorPosCallback(window: pGLFWwindow;
  cbfun: GLFWcursorposfun): pGLFWcursorposfun; cdecl; external GLFW_DLL;
function glfwSetCursorEnterCallback(window: pGLFWwindow;
  cbfun: GLFWcursorenterfun): pGLFWcursorenterfun; cdecl; external GLFW_DLL;
function glfwSetScrollCallback(window: pGLFWwindow;
  cbfun: GLFWscrollfun): pGLFWscrollfun; cdecl; external GLFW_DLL;
function glfwJoystickPresent(joy: integer): integer; cdecl; external GLFW_DLL;
function glfwGetJoystickAxes(joy: integer; var Count: integer): pfloat;
  cdecl; external GLFW_DLL;
{ TODO : ¿Como gestionar los punteros a arrays? }
function glfwGetJoystickButtons(joy: integer; varcount: integer): pCharArray;
  cdecl; external GLFW_DLL;
function glfwGetJoystickName(joy: integer): PChar; cdecl; external GLFW_DLL;


//========================================================================
// clipboard
//========================================================================
procedure glfwSetClipboardString(window: pGLFWwindow; char: string);
  cdecl; external GLFW_DLL;
function glfwGetClipboardString(window: pGLFWwindow): PChar; cdecl; external GLFW_DLL;

//========================================================================
//Time
//========================================================================
function glfwGetTime: double; cdecl; external GLFW_DLL;
procedure glfwSetTime(time: double); cdecl; external GLFW_DLL;

//========================================================================
//Context
//========================================================================
procedure glfwSwapBuffers(window: pGLFWwindow); cdecl; external GLFW_DLL;
procedure glfwMakeContextCurrent(window: pGLFWwindow); cdecl; external GLFW_DLL;
function glfwGetCurrentContext: pGLFWwindow; cdecl; external GLFW_DLL;
procedure glfwSwapInterval(interval: integer); cdecl; external GLFW_DLL;
function glfwExtensionSupported(extension: PChar): integer; cdecl; external GLFW_DLL;
function glfwGetProcAddress(procname: PChar): pGLFWglproc; cdecl; external GLFW_DLL;

//========================================================================
// Error
//========================================================================

function glfwSetErrorCallback(cbfun: GLFWerrorfun): pGLFWerrorfun;
  cdecl; external GLFW_DLL;


implementation

end.
